ExprParser.py
# Generated from Expr.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ExprParser ( Parser ):

    grammarFileName = "Expr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'and'", "'or'", "'not'", "'if'", "'else'", 
                     "'def'", "'='", "'*'", "'return'", "'=='", "'+'", "'-'", 
                     "','", "';'", "'('", "')'", "'{'", "'}'" ]

    symbolicNames = [ "<INVALID>", "AND", "OR", "NOT", "IF", "ELSE", "DEF", 
                      "ASING", "MULT", "RETURN", "EQ", "SUM", "LESS", "COMMA", 
                      "SEMI", "LPAREN", "RPAREN", "LCURLY", "RCURLY", "INT", 
                      "WS", "ID" ]

    RULE_program = 0
    RULE_statment = 1
    RULE_ifstat = 2
    RULE_funcstat = 3
    RULE_operator = 4
    RULE_logic_operator = 5
    RULE_expr = 6
    RULE_func = 7

    ruleNames =  [ "program", "statment", "ifstat", "funcstat", "operator", 
                   "logic_operator", "expr", "func" ]

    EOF = Token.EOF
    AND=1
    OR=2
    NOT=3
    IF=4
    ELSE=5
    DEF=6
    ASING=7
    MULT=8
    RETURN=9
    EQ=10
    SUM=11
    LESS=12
    COMMA=13
    SEMI=14
    LPAREN=15
    RPAREN=16
    LCURLY=17
    RCURLY=18
    INT=19
    WS=20
    ID=21

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(ExprParser.EOF, 0)

        def statment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatmentContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatmentContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = ExprParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 19
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2622040) != 0):
                self.state = 16
                self.statment()
                self.state = 21
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 22
            self.match(ExprParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatmentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ifstat(self):
            return self.getTypedRuleContext(ExprParser.IfstatContext,0)


        def funcstat(self):
            return self.getTypedRuleContext(ExprParser.FuncstatContext,0)


        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(ExprParser.SEMI, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_statment

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatment" ):
                listener.enterStatment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatment" ):
                listener.exitStatment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatment" ):
                return visitor.visitStatment(self)
            else:
                return visitor.visitChildren(self)




    def statment(self):

        localctx = ExprParser.StatmentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statment)
        try:
            self.state = 29
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [4]:
                self.enterOuterAlt(localctx, 1)
                self.state = 24
                self.ifstat()
                pass
            elif token in [6]:
                self.enterOuterAlt(localctx, 2)
                self.state = 25
                self.funcstat()
                pass
            elif token in [3, 9, 19, 21]:
                self.enterOuterAlt(localctx, 3)
                self.state = 26
                self.expr(0)
                self.state = 27
                self.match(ExprParser.SEMI)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(ExprParser.IF, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(ExprParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def LCURLY(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.LCURLY)
            else:
                return self.getToken(ExprParser.LCURLY, i)

        def statment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatmentContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatmentContext,i)


        def RCURLY(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.RCURLY)
            else:
                return self.getToken(ExprParser.RCURLY, i)

        def ELSE(self):
            return self.getToken(ExprParser.ELSE, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_ifstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfstat" ):
                listener.enterIfstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfstat" ):
                listener.exitIfstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfstat" ):
                return visitor.visitIfstat(self)
            else:
                return visitor.visitChildren(self)




    def ifstat(self):

        localctx = ExprParser.IfstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_ifstat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 31
            self.match(ExprParser.IF)
            self.state = 32
            self.match(ExprParser.LPAREN)
            self.state = 33
            self.expr(0)
            self.state = 34
            self.match(ExprParser.RPAREN)
            self.state = 35
            self.match(ExprParser.LCURLY)
            self.state = 36
            self.statment()
            self.state = 37
            self.match(ExprParser.RCURLY)


            self.state = 44
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==5:
                self.state = 39
                self.match(ExprParser.ELSE)
                self.state = 40
                self.match(ExprParser.LCURLY)
                self.state = 41
                self.statment()
                self.state = 42
                self.match(ExprParser.RCURLY)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FuncstatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DEF(self):
            return self.getToken(ExprParser.DEF, 0)

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.ID)
            else:
                return self.getToken(ExprParser.ID, i)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def LCURLY(self):
            return self.getToken(ExprParser.LCURLY, 0)

        def RCURLY(self):
            return self.getToken(ExprParser.RCURLY, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def statment(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.StatmentContext)
            else:
                return self.getTypedRuleContext(ExprParser.StatmentContext,i)


        def getRuleIndex(self):
            return ExprParser.RULE_funcstat

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFuncstat" ):
                listener.enterFuncstat(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFuncstat" ):
                listener.exitFuncstat(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFuncstat" ):
                return visitor.visitFuncstat(self)
            else:
                return visitor.visitChildren(self)




    def funcstat(self):

        localctx = ExprParser.FuncstatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_funcstat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 46
            self.match(ExprParser.DEF)
            self.state = 47
            self.match(ExprParser.ID)
            self.state = 48
            self.match(ExprParser.LPAREN)
            self.state = 49
            self.match(ExprParser.ID)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 50
                self.match(ExprParser.COMMA)
                self.state = 51
                self.match(ExprParser.ID)
                self.state = 56
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 57
            self.match(ExprParser.RPAREN)
            self.state = 58
            self.match(ExprParser.LCURLY)
            self.state = 62
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2622040) != 0):
                self.state = 59
                self.statment()
                self.state = 64
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 65
            self.match(ExprParser.RCURLY)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OperatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LESS(self):
            return self.getToken(ExprParser.LESS, 0)

        def SUM(self):
            return self.getToken(ExprParser.SUM, 0)

        def MULT(self):
            return self.getToken(ExprParser.MULT, 0)

        def EQ(self):
            return self.getToken(ExprParser.EQ, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOperator" ):
                listener.enterOperator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOperator" ):
                listener.exitOperator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOperator" ):
                return visitor.visitOperator(self)
            else:
                return visitor.visitChildren(self)




    def operator(self):

        localctx = ExprParser.OperatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 67
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 7424) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logic_operatorContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OR(self):
            return self.getToken(ExprParser.OR, 0)

        def AND(self):
            return self.getToken(ExprParser.AND, 0)

        def getRuleIndex(self):
            return ExprParser.RULE_logic_operator

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLogic_operator" ):
                listener.enterLogic_operator(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLogic_operator" ):
                listener.exitLogic_operator(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogic_operator" ):
                return visitor.visitLogic_operator(self)
            else:
                return visitor.visitChildren(self)




    def logic_operator(self):

        localctx = ExprParser.Logic_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_logic_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            _la = self._input.LA(1)
            if not(_la==1 or _la==2):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def INT(self):
            return self.getToken(ExprParser.INT, 0)

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def func(self):
            return self.getTypedRuleContext(ExprParser.FuncContext,0)


        def ASING(self):
            return self.getToken(ExprParser.ASING, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def NOT(self):
            return self.getToken(ExprParser.NOT, 0)

        def RETURN(self):
            return self.getToken(ExprParser.RETURN, 0)

        def operator(self):
            return self.getTypedRuleContext(ExprParser.OperatorContext,0)


        def logic_operator(self):
            return self.getTypedRuleContext(ExprParser.Logic_operatorContext,0)


        def getRuleIndex(self):
            return ExprParser.RULE_expr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr" ):
                listener.enterExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr" ):
                listener.exitExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)



    def expr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = ExprParser.ExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 12
        self.enterRecursionRule(localctx, 12, self.RULE_expr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.state = 72
                self.match(ExprParser.INT)
                pass

            elif la_ == 2:
                self.state = 73
                self.match(ExprParser.ID)
                pass

            elif la_ == 3:
                self.state = 74
                self.func()
                pass

            elif la_ == 4:
                self.state = 75
                self.match(ExprParser.ID)
                self.state = 76
                self.match(ExprParser.ASING)
                self.state = 77
                self.expr(5)
                pass

            elif la_ == 5:
                self.state = 78
                self.match(ExprParser.NOT)
                self.state = 79
                self.expr(4)
                pass

            elif la_ == 6:
                self.state = 80
                self.match(ExprParser.RETURN)
                self.state = 81
                self.expr(1)
                pass


            self._ctx.stop = self._input.LT(-1)
            self.state = 94
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 92
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
                    if la_ == 1:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 84
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 85
                        self.operator()
                        self.state = 86
                        self.expr(4)
                        pass

                    elif la_ == 2:
                        localctx = ExprParser.ExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_expr)
                        self.state = 88
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 89
                        self.logic_operator()
                        self.state = 90
                        self.expr(3)
                        pass

             
                self.state = 96
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class FuncContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(ExprParser.ID, 0)

        def LPAREN(self):
            return self.getToken(ExprParser.LPAREN, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(ExprParser.ExprContext)
            else:
                return self.getTypedRuleContext(ExprParser.ExprContext,i)


        def RPAREN(self):
            return self.getToken(ExprParser.RPAREN, 0)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(ExprParser.COMMA)
            else:
                return self.getToken(ExprParser.COMMA, i)

        def getRuleIndex(self):
            return ExprParser.RULE_func

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunc" ):
                listener.enterFunc(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunc" ):
                listener.exitFunc(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunc" ):
                return visitor.visitFunc(self)
            else:
                return visitor.visitChildren(self)




    def func(self):

        localctx = ExprParser.FuncContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_func)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.match(ExprParser.ID)
            self.state = 98
            self.match(ExprParser.LPAREN)
            self.state = 99
            self.expr(0)
            self.state = 104
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==13:
                self.state = 100
                self.match(ExprParser.COMMA)
                self.state = 101
                self.expr(0)
                self.state = 106
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 107
            self.match(ExprParser.RPAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx



    def sempred(self, localctx:RuleContext, ruleIndex:int, predIndex:int):
        if self._predicates == None:
            self._predicates = dict()
        self._predicates[6] = self.expr_sempred
        pred = self._predicates.get(ruleIndex, None)
        if pred is None:
            raise Exception("No predicate with index:" + str(ruleIndex))
        else:
            return pred(localctx, predIndex)

    def expr_sempred(self, localctx:ExprContext, predIndex:int):
            if predIndex == 0:
                return self.precpred(self._ctx, 3)
         

            if predIndex == 1:
                return self.precpred(self._ctx, 2)
         




